deploy/k8s/21-gitlab-runner.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-runner
